# xmlbeansxx

./: .DCOPserver_psp_:0  .DCOPserver_psp__0  .ICEauthority  .Xauthority  .bash_history  .bashrc  .gtkrc-1.2-gnome2  .recently-used  .xsession-errors  CMakeLists.txt  ChangeLog  Makefile.am  Makefile.svn  README.Linux  README.Windows  README.txt  bootstrap  cbootstrap  configure.ac  description  mig.sh  mig_log4cxx.sh  nmbootstrap.bat  nmbootstrapr.bat  pom.xml  toukca.pem  vsbootstrap.bat  vsbootstrapr.bat
.camel_certs/: 0f:c6:c6:a8:84:5d:2d:6f:df:78:3d:90:92:96:dd:66
.evolution/: camel-cert.db  key3.db  secmod.db
.evolution/mail/: searches.xml
.evolution/mail/config/: folder-tree-expand-state.xml  gtkrc-mail-fonts
.evolution/mail/imap/piotrs@touk.pl/: .ev-store-summary
.evolution/mail/imap/psp@touk.pl/: .ev-store-summary
.evolution/mail/local/: Drafts.ibex.index  Inbox.cmeta  Inbox.ev-summary  Inbox.ibex.index  Inbox.ibex.index.data  Sent.cmeta
.gconf/apps/epiphany/: %gconf.xml
.gconf/apps/evolution/: %gconf.xml
.gconf/apps/evolution/addressbook/: %gconf.xml
.gconf/apps/gksu/: %gconf.xml
.gconf/apps/nautilus/: %gconf.xml
.gconfd/: saved_state
.gnome/gnome-vfs/: .trash_entry_cache
.gnome2/: gedit-2  gedit-metadata.xml
.gnome2/accels/: epiphany-browser  gedit
.gnome2/epiphany/: bookmarks.rdf  ephy-bookmarks.xml  ephy-favicon-cache.xml  ephy-history.xml  epiphany-toolbars-3.xml  states.xml
.gnome2_private/: Evolution
.gstreamer-0.10/: registry.x86_64.xml
.kde/: cache-psp  socket-psp  tmp-psp
.kde/share/config/: docdevhelppluginrc  docdoxygenpluginrc  dockdevtocpluginrc  docqtpluginrc  emaildefaults  katesyntaxhighlightingrc  kconf_updaterc  kdeglobals  kdevcppsupportrc  kdeveloprc  kdevfileselectorrc  kdevsnippetrc  khotkeysrc
.mcop/: random-seed
.mcop/trader-cache/: cache-data-version
.mozilla/firefox/: profiles.ini
.mozilla/firefox/ixwn24ss.default/: XPC.mfasl  XUL.mfasl  bookmarks.html  cert8.db  compatibility.ini  cookies.txt  extensions.cache  extensions.ini  extensions.rdf  key3.db  localstore.rdf  lock  prefs.js  search.sqlite  secmod.db  sessionstore.js  urlclassifier2.sqlite
.nautilus/metafiles/: file:%2F%2F%2Fhome%2Fpiotrs%2Fprogs%2Ftest1.xml  file:%2F%2F%2Fhome%2Fpiotrs%2Fprogs.xml  file:%2F%2F%2Fhome%2Fpiotrs.xml  file:%2F%2F%2Fhome.xml  x-nautilus-desktop:%2F%2F%2F.xml
.qt/: qt_plugins_3.3rc
cmake/: FindBoost.cmake  FindCppUnit.cmake  FindGmp.cmake  FindGmpxx.cmake  FindLog4cxx.cmake  FindMvn.cmake  FindXerces.cmake  FindXmlbeansxxInternal.cmake  Makefile.am
doc/: Doxyfile.in  Makefile.am  main-page.txt
doc/developers/: overview.txt
docs/: Doxyfile.in  Makefile.am
examples/: Makefile.am
examples/geoip/: CMakeLists.txt  Makefile.am  README.txt  bootstrap  bootstrap.bat  geoipservice.wsdl  vsbootstrap.bat
examples/geoip/cmake/: FindBoost.cmake  FindCurl.cmake  FindFbembed.cmake  FindLog4cxx.cmake  FindOpenssl.cmake  FindXalan.cmake  FindXerces.cmake  FindXmlbeansxx.cmake
examples/geoip/src/: CMakeLists.txt  Exception.cpp  Exception.h  HttpClient.cpp  HttpClient.h  WsClient.cpp  WsClient.h  geoip.cpp  geoip_xsd.xsd  log4j.xml
examples/small/: Makefile.am  c.xml  c.xsd  c2.xml  c3.xml  c4.xml  create.cpp  easypo.xml  parse.cpp  parse2.cpp  simple_types.cpp  testEasyPO.cpp  valid.cpp  xpaths.cpp
generator/: CMakeLists.txt  Makefile.am  build.xml  pom.xml
generator/src/conf/: scompxx  xmlbeansxx-gen  xmlbeansxx-genbuiltin  xmlbeansxx-split  xmlvalidator
generator/src/java/pl/touk/xmlbeansxx/: Accessors.java  ClassGen.java  Input.java  Output.java  PropGen.java  TSLoader.java  Utils.java  Validator.java
generator/src/main/assemblies/: release.xml
generator/src/main/java/pl/touk/xmlbeansxx/: ClassGen.java  Graph.java  Input.java  MyXmlErrorPrinter.java  Output.java  TSLoader.java  TypeTraversor.java  Utils.java  Validator.java
generator/src/test/java/pl/touk/xmlbeansxx/: Test01.java
m4/: BB_ENABLE_DOXYGEN.m4
progs/test1/test/: Doxyfile  Makefile.in  configure.in  test.kdevelop  test.kdevelop.pcs
src/: Makefile.am
src/documentation/: README.txt  build.properties.template  build.xml  forrest.properties  skinconf.xml  status.xml
src/xmlbeansxx/: Array.h  BeansException.cpp  BeansException.h  BoostAssert.cpp  BoostAssert.h  CMakeLists.txt  CXXBooleanHolder.cpp  CXXBooleanHolder.h  CXXDecimalHolder.cpp  CXXDecimalHolder.h  CXXDoubleHolder.cpp  CXXDoubleHolder.h  CXXFloatHolder.cpp  CXXFloatHolder.h  CXXIntHolder.cpp  CXXIntHolder.h  CXXIntegerHolder.cpp  CXXIntegerHolder.h  CXXLongHolder.cpp  CXXLongHolder.h  CXXStringHolder.cpp  CXXStringHolder.h  Calendar.cpp  Calendar.h  Contents.cpp  Contents.h  ContentsImpl.cpp  ContentsImpl.h  CoreTypes.cpp  CoreTypes.h  CoreTypes.h.gmpxx  CoreTypes.h.no_gmpxx  Dict.cpp  Dict.h  ElemDict.h  Existence.cpp  Existence.h  LibXMLParser.cpp  LibXMLParser.h  Makefile.am  (+123 more)
tags/xmlbeansxx-0_8-(build-1005)/: bootstrap
tags/xmlbeansxx-0_8-(build-1005)/examples/: Makefile.am
tags/xmlbeansxx-0_8-(build-1005)/generator/: Makefile.am
tags/xmlbeansxx-0_8-(build-1005)/tests/: ArrayTest.h  EntitiesTest.h  EnumTest.cpp  EnumTest.h  ParseTest.h  TestApp.cpp  UnqualTest.cpp  XPathTest.cpp  XmlArrayTest.cpp  XmlArrayTest.h  a.xml  c.xml  log4j.xml  mem01.cpp  pawel.xsd  unqual.xml  unqual.xsd
test1/test/: AUTHORS  configure  test.kdevses
test1/test/autom4te.cache/: output.0  output.1  requests  traces.0  traces.2
test1/test/debug/: Makefile  config.h  libtool
test1/test/src/: test.cpp
tests/: ArrayTest.cpp  BeansTest.cpp  BeansTest.h  CMakeLists.txt  CalendarTest.cpp  CalendarTest.h  EntitiesTest.cpp  EnumTest.cpp  GenTest.cpp  GenTest.h  Makefile.am  NamespaceTest.cpp  NamespaceTest.h  ParseTest.cpp  README  TestApp.cpp  UnqualTest.cpp  UnqualTest.h  XPathTest.cpp  XPathTest.h  XmlArrayTest.cpp  XmlCursorTest.cpp  XmlCursorTest.h  allTypes.xsd  b.xml  bad_c.xml  c.xh  c.xml  c.xsd  d.xml  entities.xml  entities.xml.default  entities.xsd.default  log4j.properties  log4j.xml  log4j.xml.default  mem01.cpp  mem02.cpp  mem03.cpp  pawel.xsd  (+5 more)
(+121 files in other folders)
