cmake_minimum_required(VERSION 2.6)
PROJECT (xmlbeansxx)

SET(XMLBEANSXX_VERSION 0.9.8)
SET(XMLBEANSXX_SOVERSION 5.3.0)


INCLUDE(CPack)
ENABLE_TESTING()

#cmake_minimum_required(VERSION 2.4.7)
SET(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")


IF(MSVC80)
	SET(CMAKE_CXX_WARNING_LEVEL 1)
	IF(CMAKE_CXX_FLAGS MATCHES "/W[0-4]")
		STRING(REGEX REPLACE "/W[0-4]" "/W1"
            	CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
   	ELSE(CMAKE_CXX_FLAGS MATCHES "/W[0-4]")
     		SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /W1")
	ENDIF(CMAKE_CXX_FLAGS MATCHES "/W[0-4]")
ENDIF(MSVC80)




FIND_PACKAGE(Boost REQUIRED)
FIND_PACKAGE(Xerces REQUIRED)
FIND_PACKAGE(Mvn REQUIRED)

IF(NOT WITHOUT_GMP)
    FIND_PACKAGE(Gmp)
    FIND_PACKAGE(Gmpxx)
ENDIF(NOT WITHOUT_GMP)

IF(NOT WITHOUT_LOG4CXX)
	FIND_PACKAGE(Log4cxx REQUIRED)
ENDIF(NOT WITHOUT_LOG4CXX)


FIND_PACKAGE(CppUnit)
FIND_PACKAGE(LibXml2)

FIND_PACKAGE(XmlbeansxxInternal REQUIRED)


INCLUDE_DIRECTORIES (${XERCES_INCLUDE_DIR} ${CPPUNIT_INCLUDE_DIR})


ADD_SUBDIRECTORY (generator)
ADD_SUBDIRECTORY (src/xmlbeansxx)

IF(CPPUNIT_FOUND)
	ADD_SUBDIRECTORY (tests)
ENDIF(CPPUNIT_FOUND)

