EXTRA_DIST = vsbootstrap.bat Makefile.am CMakeLists.txt bootstrap.bat bootstrap geoipservice.wsdl \
             src/Exception.cpp src/geoip_xsd.xsd src/WsClient.h src/soapEnvelope.xsd src/HttpClient.h src/WsClient.cpp src/geoip.cpp src/Exception.h src/CMakeLists.txt src/log4j.xml src/HttpClient.cpp  \
             cmake/FindLog4cxx.cmake cmake/FindXmlbeansxx.cmake cmake/FindCurl.cmake cmake/FindXerces.cmake cmake/FindBoost.cmake

